--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "express": "^4.11.2",
     "socket.io": "^1.3.4"
   },
+  "engines": {
+    "node": "0.12.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/ycheng06/Chattr.git"
